# cpp5thsemester

./: .gitgnore  .gitignore  CMakeLists.txt  README.md
plugins_src/: FuncDeg.cpp  FuncSin.cpp
src/: ExpressionEvaluator.cpp  ExpressionEvaluator.h  IFunction.h  PluginManager.cpp  PluginManager.h  main.cpp
